--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,3 +1,1 @@
-<h1>
-  {{title}}
-</h1>
+<h1><!-- here we echo the title from the component-->{{img}}</h1><!-- File input for upload without using the plugin.--><input id="photo" type="file"/><!-- button to trigger the file upload when submitted--><button class="btn btn-success btn-s" type="button" (click)="upload()">Upload with method 2</button><div *ngIf="img"><img [src]="img" style="width:300px; height: 300px;"/></div><!--img(src = img)-->
